# django-easy-icons

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  manage.py  pyproject.toml  requirements.txt  tasks.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: build.yml  changelog.yml  dependencies.yml  docs.yml  on-release-main.yml  tests.yml
docs/: conf.py  index.md  renderers.md  usage-examples.md
easy_icons/: __init__.py  apps.py  renderers.py
easy_icons/templatetags/: easy_icons.py
example/: README.md  icons.py  settings.py  urls.py
example/templates/: base.html
src/easy_icons/: utils.py
src/easy_icons/templatetags/: easy_icons.py
tests/: README.md  conftest.py  settings.py  test_base.py  test_exceptions.py  test_icon_packs.py  test_icon_registry.py  test_icons.py  test_integration.py  test_management_commands.py  test_provider_renderer.py  test_sprites_renderer.py  test_svg_renderer.py  test_templatetags.py  test_utils.py
tests/example/: urls.py
