[tool.poetry]
name = "django-easy-icons"
version = "0.1.0"
description = "Simple inline SVG icons for Django"
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "easy_icons"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

